--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div class="topnav">
             <a href=""><img src="static/folder_icon.svg" style="width:3em;height:3em"></a>
-            <a href=""><img src="static/info_icon.svg" style="width:3em;height:3em"></a>
+            <a href="#info-page"><img src="static/info_icon.svg" style="width:3em;height:3em"></a>
         </div>
     </header>
     <div class="container">
