--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
                 <a href="mailto:vincentonggo@gmail.com" target="_blank"><img src="static/email_icon.svg"></a>
             </div>
         </div>
-    </div>\
+    </div>
 </body>
 </html>
