--- a/autodrive.html
+++ b/autodrive.html
@@ -5,71 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title - Vincent Onggo</title>
     <link rel="stylesheet" href="static/autodrive.css">
+    <link rel="stylesheet" href="static/navbar.css">
+    <script src="navbar.js" defer></script>
+    <script></script>
 </head>
 <body>
+    <header>
+        <div id="navbar"></div>
+    </header>
+    <div id="container3D"></div>
 
-        
     <div class="project-container">
-        <!-- Project Overview -->
         <section class="project-overview">
             <h1>Project Title</h1>
             <div class="overview-content">
-                <p><strong>Overview:</strong> Briefly describe the project here, the motivation, and the goal of the project. You can mention your role and the technologies used.</p>
+                <p><strong>Overview:</strong> Briefly describe the project here, the motivation, and the goal of the project.</p>
                 <p><strong>Role:</strong> Design Lead</p>
                 <p><strong>Duration:</strong> Oct '20 – May '21</p>
             </div>
         </section>
-
-        <!-- Business Problem -->
-        <section class="business-problem">
-            <h2>Business Problem</h2>
-            <p>Describe the business challenge that the project aims to address. For example, declining growth or inefficiencies in a certain area.</p>
-        </section>
-
-        <!-- User Problem -->
-        <section class="user-problem">
-            <h2>User Problem</h2>
-            <p>Provide insights into the problems that users are facing, how the project solves them, and the pain points encountered.</p>
-        </section>
-
-        <!-- User Research -->
-        <section class="user-research">
-            <h2>User Research</h2>
-            <p>Describe the user research conducted, such as interviews or surveys, and the key insights that helped shape the project.</p>
-            <ul>
-                <li>Research method 1</li>
-                <li>Research method 2</li>
-                <li>Research insights</li>
-            </ul>
-        </section>
-
-        <!-- Validation -->
-        <section class="validation">
-            <h2>Validation</h2>
-            <p>Explain how the project was validated, including any A/B testing, focus groups, or metrics collected.</p>
-        </section>
-
-        <!-- Explorations -->
-        <section class="explorations">
-            <h2>Explorations</h2>
-            <div class="exploration-images">
-                <img src="static/exploration1.png" alt="Exploration Image 1">
-                <img src="static/exploration2.png" alt="Exploration Image 2">
-            </div>
-            <p>Describe any alternative approaches you explored for solving the problem, along with images or screenshots of prototypes.</p>
-        </section>
-
-        <!-- Takeaways -->
-        <section class="takeaways">
-            <h2>Takeaways</h2>
-            <p>Share key learnings from the project, such as technical skills, design considerations, or product-market fit insights.</p>
-        </section>
-
-        <!-- Iteration -->
-        <section class="iteration">
-            <h2>Iteration</h2>
-            <p>Outline any planned iterations, improvements, or updates that were made after the initial launch.</p>
-        </section>
     </div>
 </body>
-</html>
+</html> 
