--- a/autodrive.html
+++ b/autodrive.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title - Vincent Onggo</title>
+    <link rel="icon" href="static/VO.png">
     <link rel="stylesheet" href="static/autodrive.css">
     <link rel="stylesheet" href="static/navbar.css">
     <script src="navbar.js" defer></script>
@@ -13,11 +14,10 @@
     <header>
         <div id="navbar"></div>
     </header>
-    <div id="container3D"></div>
-
     <div class="project-container">
         <section class="project-overview">
-            <h1>Project Title</h1>
+            <img src="static/autodrive/f1tenth_car.png">
+            <h1>CURVE Undergraduate Researcher @AutoDrive Lab</h1>
             <div class="overview-content">
                 <p><strong>Overview:</strong> Briefly describe the project here, the motivation, and the goal of the project.</p>
                 <p><strong>Role:</strong> Design Lead</p>
