link title to page done

--- a/index.html
+++ b/index.html
@@ -32,15 +32,21 @@
                     <td class="description description1">Develop a scaled down autonomous car</td>
                 </tr>
                 <tr style="border: 2px solid black">
-                    <td class="project project2">02 Global Prima Indotek</td>
+                    <td class="project project2">
+                        <a href="gpi.html" style="text-decoration:none; color:black;">02 Global Prima Indotek</a>
+                    </td>
                     <td class="description description2">Programmed a label checker app for Quality Control</td>
                 </tr>
                 <tr style="border: 2px solid black">
-                    <td class="project project3">03 UVinci</td>
+                    <td class="project project3">
+                        <a href="uvinci.html" style="text-decoration:none; color:black;">03 UVinci</a>
+                    </td>
                     <td class="description description3">Built an Automatic Door Handle Sanitizer</td>
                 </tr>
                 <tr style="border: 2px solid black">
-                    <td class="project project4">04 Vertilogic</td>
+                    <td class="project project4">
+                        <a href="vertologic.html" style="text-decoration:none; color:black;">04 Vertilogic</a>
+                    </td>
                     <td class="description description4">Advanced a 360 degrees exhibition center web app</td>
                 </tr>
             </table>
