finished autodrive.html

--- a/autodrive.html
+++ b/autodrive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title - Vincent Onggo</title>
+    <title>F1-Tenth Autonomous Vehicle Project - [Your Name]</title>
     <link rel="icon" href="static/VO.png">
     <link rel="stylesheet" href="static/autodrive/autodrive.css">
     <link rel="stylesheet" href="static/navbar.css">
@@ -16,10 +16,10 @@
 
     <div class="project-container">
         <div class="image-overview">
-            <img src="static/autodrive/f1tenth_car.png" alt="Project Image">
+            <img src="static/autodrive/f1tenth_car.png" alt="F1-Tenth Car">
         </div>
         <!-- Project Title -->
-        <h1>Tinder Platinum</h1>
+        <h1>F1-Tenth Autonomous Vehicle Research</h1>
 
         <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
@@ -27,54 +27,56 @@
                 <h2>Overview</h2>
             </div>
             <div class="overview-right">
-                <p>Designing a new premium subscription tier for Tinder. I led the visual design and focus group testing to finalize features like prioritized likes and pre-match messaging.</p>
-                <p>Featured on <a href="#">TechCrunch</a> + <a href="#">Mashable</a>.</p>
+                <p>In the rapidly advancing field of autonomous vehicles, my role in the F1-Tenth project focused on pushing the boundaries of scaled-down self-driving technology. As part of a multidisciplinary team, I spearheaded the creation of an experimental testbed that allowed us to transition from theoretical research into real-world applications. From implementing custom control algorithms to ensuring that simulation-based designs translated effectively to physical hardware, this project was at the forefront of autonomous systems research.</p>
                 <div class="role-duration">
-                    <p><strong>Role:</strong> Design Lead</p>
-                    <p><strong>Duration:</strong> October '19 — May '20</p>
-                    <a href="#">View full presentation</a>
+                    <p><strong>Role:</strong> Autonomous Vehicle Research Engineer</p>
+                    <p><strong>Duration:</strong> July 2023 — May 2024</p>
+                    <a href="static/autodrive/poster.pdf" target="_blank">View full research poster</a>
                 </div>
             </div>
         </section>
 
-        <!-- Business and User Problem Section (two-column layout) -->
+        <!-- Problem Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Problem</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>The Challenge</h2>
+                <p>Autonomous driving continues to be one of the most significant challenges in transportation technology. Our research team set out to develop a flexible and scalable testbed, aimed at advancing self-driving capabilities while addressing the complex challenges of transitioning algorithms from simulation to real-world environments. The challenge was not just building an autonomous vehicle but ensuring that it could handle real-world driving scenarios while improving on existing reinforcement learning models.</p>
             </div>
         </section>
 
+        <!-- Solution Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Solution</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Our Approach</h2>
+                <p>The F1-Tenth platform provided a flexible foundation for developing advanced control strategies. My work centered on designing custom controllers for tasks like driving straight and implementing a PID-based wall-following system, enabling the vehicle to navigate autonomously. I focused on sim-to-real adjustments to align simulation with real-world performance, solving issues like steering instability by dynamically modifying the steering angle to correct oscillations.</p> <p>I fine-tuned the PID control parameters to improve wall-following precision, ensuring smooth navigation. Additionally, I used VESC software to enhance motor control, achieving refined acceleration. Setting up and calibrating a depth perception camera enabled the vehicle to capture crucial environmental data and supported real-time monitoring through live video streaming. These efforts advanced the vehicle's performance and reliability in both simulation and real-world testing.</p>
             </div>
         </section>
 
+        <!-- Impact Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Impact</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>The Results</h2>
+                <p>The impact of this project extended beyond simply getting an autonomous vehicle to function. By creating a comprehensive testbed, we were able to advance both the research and practical aspects of self-driving systems. The custom control algorithms we developed played a key role in optimizing the vehicle's performance, while the integration of hardware and software allowed for smoother, more reliable real-world driving. Additionally, the experience I gained in fine-tuning algorithms, real-time simulation, and sensor calibration contributed to the growing body of knowledge in autonomous vehicle research.</p>
             </div>
         </section>
 
+        <!-- Takeaways Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Takeaways</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Lessons Learned</h2>
+                <p>Throughout this project, I honed my skills in robotics software, particularly with ROS and RViz, and gained a deep understanding of how reinforcement learning and control systems can be applied to real-world problems. One of the most valuable lessons was the importance of sim-to-real consistency—bridging the gap between simulations and physical systems is critical for the success of autonomous systems in real-world scenarios. The hands-on work with the F1-Tenth car has been pivotal in my development as an engineer and researcher, and has solidified my passion for working at the intersection of hardware, software, and machine learning.</p>
             </div>
         </section>
     </div>
