--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="margin-left:0; margin-right:0">
     <header>
         <div class="topnav">
-            <a href="static/CV.pdf" download="Vincent_Onggo_Resume.pdf">
+            <a href="static/CV.pdf" target="_blank" Vincent_Onggo_Resume.pdf">
                 <img src="static/folder_icon.svg" style="width:3em;height:3em" alt="Download PDF">
             </a>
             <a href="#info-page"><img src="static/info_icon.svg" style="width:3em;height:3em"></a>
