--- a/autodrive.html
+++ b/autodrive.html
@@ -31,7 +31,7 @@
                 <div class="role-duration">
                     <p><strong>Role:</strong> Autonomous Vehicle Research Engineer</p>
                     <p><strong>Duration:</strong> July 2023 — May 2024</p>
-                    <a href="static/autodrive/poster.pdf" target="_blank">View full research poster</a>
+                    <a href="static/autodrive/poster.pdf" target="_blank">View Research Poster</a>
                 </div>
             </div>
         </section>
