--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </tr>
                 <tr style="border: 2px solid black">
                     <td class="project project2">
-                        <a href="gpi.html" style="text-decoration:none; color:black;">02 Global Prima Indotek</a>
+                        <a href="litup.html" style="text-decoration:none; color:black;">02 LitUp Network</a>
                     </td>
-                    <td class="description description2">Programmed a label checker app for Quality Control</td>
+                    <td class="description description2">Programmed data visualization tool</td>
                 </tr>
                 <tr style="border: 2px solid black">
                     <td class="project project3">
@@ -56,7 +56,7 @@
             <div class="right" style="float:right">
                 <h1 class="personal-info-header">Welcome to my page &#128075;</h1>
                 <p class="personal-info">
-                    I am currently a freshman at USC, pursuing Computer Engineering and Computer Science.
+                    I am currently a sophomore at USC, pursuing Computer Engineering and Computer Science.
     
                     I am proficient in C/C++, Python, HTML, CSS, JS.
     
