--- a/uvinci.html
+++ b/uvinci.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title - Vincent Onggo</title>
+    <title>UVinci</title>
     <link rel="icon" href="static/VO.png">
     <link rel="stylesheet" href="static/autodrive/autodrive.css">
     <link rel="stylesheet" href="static/navbar.css">
@@ -16,10 +16,10 @@
 
     <div class="project-container">
         <div class="image-overview">
-            <img src="static/autodrive/f1tenth_car.png" alt="Project Image">
+            <img src="static/uvinci/uvinciProduct.JPG" alt="Project Image"> <!-- Update image path if needed -->
         </div>
         <!-- Project Title -->
-        <h1>Tinder Platinum</h1>
+        <h1>UVinci's Automatic UV Door Handle Sanitizer</h1>
 
         <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
@@ -27,12 +27,11 @@
                 <h2>Overview</h2>
             </div>
             <div class="overview-right">
-                <p>Designing a new premium subscription tier for Tinder. I led the visual design and focus group testing to finalize features like prioritized likes and pre-match messaging.</p>
-                <p>Featured on <a href="#">TechCrunch</a> + <a href="#">Mashable</a>.</p>
+                <p>During the pandemic, preventing contact with commonly touched surfaces is crucial to avoid infection. Door handles, being one of the most touched surfaces, pose a significant risk. Traditional cleaning methods, such as wiping or spraying with alcohol, are often forgotten or can damage door handles over time. UVinci’s sanitizer device addresses this problem by automatically sanitizing door handles using UV-C rays when its Pyroelectric Infrared Sensor (PIR) detects motion.</p>
                 <div class="role-duration">
-                    <p><strong>Role:</strong> Design Lead</p>
-                    <p><strong>Duration:</strong> October '19 — May '20</p>
-                    <a href="#">View full presentation</a>
+                    <p><strong>Role:</strong> Developer</p>
+                    <p><strong>Duration:</strong> November 2020 - July 2023</p>
+                    <!-- <a href="#">View full presentation</a> -->
                 </div>
             </div>
         </section>
@@ -44,7 +43,7 @@
             </div>
             <div class="details-right">
                 <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <p>Commonly touched surfaces, especially door handles, are critical points for virus and bacteria transmission. Traditional sanitization methods can be easily forgotten, leading to potential health risks. Moreover, frequent exposure to harsh chemicals can damage door handles over time, necessitating a more reliable solution.</p>
             </div>
         </section>
 
@@ -53,8 +52,8 @@
                 <h2>Solution</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Solution</h2>
+                <p>UVinci’s sanitizer device automatically sanitizes door handles with UV-C light upon detecting motion through a PIR sensor. Powered by a rechargeable lithium-ion battery and controlled by an Attiny-13a-PU microcontroller, the device operates with a time delay for optimal performance. The 3D-printed casing includes a shield mechanism to contain UV light and a detachable latch system for easy recharging.</p>
             </div>
         </section>
 
@@ -63,8 +62,8 @@
                 <h2>Impact</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Impact</h2>
+                <p>The prototype is fully functional and has been implemented in Ngaduman Village, Java, where healthcare access is limited. The device is installed on door handles in public spaces like schools and churches, contributing to safer environments. Fundraising efforts through Bantoo.id have successfully raised 9.5 million rupiahs to facilitate larger scale manufacturing.</p>
             </div>
         </section>
 
@@ -73,8 +72,8 @@
                 <h2>Takeaways</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Takeaways</h2>
+                <p>This project has provided valuable insights into the importance of innovative solutions in public health. It has highlighted the necessity of user-centered design in creating effective sanitization technologies. The experience gained in the development and fundraising processes has deepened my understanding of product management and the challenges faced in bringing a new product to market.</p>
             </div>
         </section>
     </div>
