--- a/vertologic.html
+++ b/vertologic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title - Vincent Onggo</title>
+    <title>Vertilogic</title>
     <link rel="icon" href="static/VO.png">
     <link rel="stylesheet" href="static/autodrive/autodrive.css">
     <link rel="stylesheet" href="static/navbar.css">
@@ -16,10 +16,10 @@
 
     <div class="project-container">
         <div class="image-overview">
-            <img src="static/autodrive/f1tenth_car.png" alt="Project Image">
+            <img src="static/vertilogic/virtuex.png" alt="Project Image">
         </div>
         <!-- Project Title -->
-        <h1>Tinder Platinum</h1>
+        <h1>Virtue-X</h1>
 
         <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
@@ -27,12 +27,11 @@
                 <h2>Overview</h2>
             </div>
             <div class="overview-right">
-                <p>Designing a new premium subscription tier for Tinder. I led the visual design and focus group testing to finalize features like prioritized likes and pre-match messaging.</p>
-                <p>Featured on <a href="#">TechCrunch</a> + <a href="#">Mashable</a>.</p>
+                <p>Collaborated in a cross-functional team at Vertilogic, a software solutions company, to develop Virtue-X, a platform connecting exhibitors and visitors through a virtual 360° exhibition experience. This innovative solution emerged as a critical tool during the COVID-19 pandemic when traditional in-person exhibitions were not feasible, allowing businesses to maintain engagement and reach their audiences remotely.</p>
                 <div class="role-duration">
-                    <p><strong>Role:</strong> Design Lead</p>
-                    <p><strong>Duration:</strong> October '19 — May '20</p>
-                    <a href="#">View full presentation</a>
+                    <p><strong>Role:</strong> Intern Web App Developer</p>
+                    <p><strong>Duration:</strong> June '21 — July '21</p>
+                    <a href="http://104.248.150.69/" target="_blank">View demo</a>
                 </div>
             </div>
         </section>
@@ -44,7 +43,7 @@
             </div>
             <div class="details-right">
                 <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <p>Exhibitors and visitors faced significant challenges connecting effectively in a traditional exhibition format. The pandemic created restrictions on gatherings, leading to the cancellation of many events. Businesses struggled to showcase their products and services, while potential customers were unable to explore new offerings in person. This gap in the market highlighted the need for a robust digital solution that could facilitate meaningful connections and interactions remotely.</p>
             </div>
         </section>
 
@@ -53,8 +52,8 @@
                 <h2>Solution</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Solution</h2>
+                <p>Developed Virtue-X, a virtual platform utilizing Node.js for backend communication, allowing real-time interactions between exhibitors and visitors. The platform included features such as virtual booths, live chat, and video conferencing, which enabled exhibitors to present their offerings dynamically. This solution not only replicated the exhibition experience online but also enhanced it by providing data analytics on user engagement, helping businesses tailor their approaches effectively.</p>
             </div>
         </section>
 
@@ -63,18 +62,18 @@
                 <h2>Impact</h2>
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Impact</h2>
+                <p>Virtue-X facilitated connections between exhibitors and visitors during a time when physical interaction was impossible. It enhanced engagement, allowing businesses to maintain visibility and adapt to the new digital landscape. The platform enabled exhibitors to reach a broader audience beyond geographical limitations, leading to increased participation and interest in virtual events. Feedback from users indicated a high level of satisfaction with the virtual experience, marking a successful transition from traditional exhibitions to digital platforms.</p>
             </div>
         </section>
 
         <section class="details-section">
             <div class="details-left">
-                <h2>Takeaways</h2>
+                <h2>Takeaways</h2> 
             </div>
             <div class="details-right">
-                <h2>User Problem</h2>
-                <p>Getting matches is difficult for Tinder Gold users. Users swipe through their likes quickly, often causing dissatisfaction due to the platform's gender imbalance.</p>
+                <h2>Takeaways</h2>
+                <p>Gained hands-on experience in developing real-time communication features and integrating interactive UI elements using JavaScript, HTML, and CSS. This project reinforced the importance of adaptability and innovation in product development, especially in response to global challenges. Additionally, it highlighted the value of user feedback in shaping product features and ensuring a user-centered design approach. The experience enriched my understanding of cross-functional collaboration in a fast-paced development environment.</p>
             </div>
         </section>
     </div>
