addded vertilogic - virtuex

--- a/vertologic.html
+++ b/vertologic.html
@@ -19,7 +19,7 @@
             <img src="static/vertilogic/virtuex.png" alt="Project Image">
         </div>
         <!-- Project Title -->
-        <h1>Virtue-X</h1>
+        <h1>Vertilogic - Virtue-X Client</h1>
 
         <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
