--- a/autodrive.html
+++ b/autodrive.html
@@ -18,16 +18,15 @@
         <div class="image-overview">
             <img src="static/autodrive/f1tenth_car.png" alt="F1-Tenth Car">
         </div>
-        <!-- Project Title -->
+        
         <h1>F1-Tenth Autonomous Vehicle Research</h1>
 
-        <!-- Overview Section (two-column layout) -->
         <section class="overview-section">
             <div class="overview-left">
                 <h2>Overview</h2>
             </div>
             <div class="overview-right">
-                <p>In the rapidly advancing field of autonomous vehicles, my role in the F1-Tenth project focused on pushing the boundaries of scaled-down self-driving technology. As part of a multidisciplinary team, I spearheaded the creation of an experimental testbed that allowed us to transition from theoretical research into real-world applications. From implementing custom control algorithms to ensuring that simulation-based designs translated effectively to physical hardware, this project was at the forefront of autonomous systems research.</p>
+                <p>Autonomous vehicles are changing the future of transportation, and my journey with the F1-Tenth project was all about making those advancements more accessible. As part of a multidisciplinary team, I helped develop an experimental testbed that bridged the gap between theory and real-world implementation. My focus? Taking self-driving technology from simulation to reality—building control systems, refining algorithms, and troubleshooting hardware/software integration to push the boundaries of what these small-scale autonomous vehicles could do.</p>
                 <div class="role-duration">
                     <p><strong>Role:</strong> Autonomous Vehicle Research Engineer</p>
                     <p><strong>Duration:</strong> July 2023 — May 2024</p>
@@ -36,47 +35,46 @@
             </div>
         </section>
 
-        <!-- Problem Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Problem</h2>
             </div>
             <div class="details-right">
                 <h2>The Challenge</h2>
-                <p>Autonomous driving continues to be one of the most significant challenges in transportation technology. Our research team set out to develop a flexible and scalable testbed, aimed at advancing self-driving capabilities while addressing the complex challenges of transitioning algorithms from simulation to real-world environments. The challenge was not just building an autonomous vehicle but ensuring that it could handle real-world driving scenarios while improving on existing reinforcement learning models.</p>
+                <p>Developing self-driving technology isn’t just about making a car move on its own—it’s about making it move intelligently, safely, and reliably. Our team set out to create a flexible, scalable testbed to develop and test control algorithms. The toughest part? Ensuring that what worked in simulation also performed well in the real world. From handling sensor noise to stabilizing control responses, I faced complex challenges that required creative problem-solving, persistence, and a willingness to iterate.</p>
             </div>
         </section>
 
-        <!-- Solution Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Solution</h2>
             </div>
             <div class="details-right">
                 <h2>Our Approach</h2>
-                <p>The F1-Tenth platform provided a flexible foundation for developing advanced control strategies. My work centered on designing custom controllers for tasks like driving straight and implementing a PID-based wall-following system, enabling the vehicle to navigate autonomously. I focused on sim-to-real adjustments to align simulation with real-world performance, solving issues like steering instability by dynamically modifying the steering angle to correct oscillations.</p> <p>I fine-tuned the PID control parameters to improve wall-following precision, ensuring smooth navigation. Additionally, I used VESC software to enhance motor control, achieving refined acceleration. Setting up and calibrating a depth perception camera enabled the vehicle to capture crucial environmental data and supported real-time monitoring through live video streaming. These efforts advanced the vehicle's performance and reliability in both simulation and real-world testing.</p>
+                <p>My role focused on designing and refining control strategies. I developed custom controllers for basic maneuvers like straight-line driving and implemented a PID-based wall-following system to enhance autonomous navigation. One of the biggest challenges was adapting simulation-based designs to work in real-world environments. By fine-tuning PID parameters and dynamically adjusting steering angles, I improved stability and reduced oscillations.</p>
+                <p>Beyond algorithms, I worked hands-on with hardware, setting up and calibrating a depth perception camera to improve environmental awareness. I also optimized motor control using VESC software, which enhanced acceleration and made the vehicle’s movement smoother. Throughout this process, I relied not just on technical knowledge but also on teamwork, adaptability, and troubleshooting skills to get things working seamlessly.</p>
             </div>
         </section>
 
-        <!-- Impact Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Impact</h2>
             </div>
             <div class="details-right">
                 <h2>The Results</h2>
-                <p>The impact of this project extended beyond simply getting an autonomous vehicle to function. By creating a comprehensive testbed, we were able to advance both the research and practical aspects of self-driving systems. The custom control algorithms we developed played a key role in optimizing the vehicle's performance, while the integration of hardware and software allowed for smoother, more reliable real-world driving. Additionally, the experience I gained in fine-tuning algorithms, real-time simulation, and sensor calibration contributed to the growing body of knowledge in autonomous vehicle research.</p>
+                <p>This project was about more than just building an autonomous car—it was about developing a robust platform for future research and innovation. The testbed we created allowed for iterative experimentation, making it easier to test and improve control algorithms in a real-world setting. My work on control strategies contributed to smoother, more reliable autonomous navigation, while the integration of software and hardware helped bridge the sim-to-real gap.</p>
+                <p>More than the technical results, this experience reinforced the importance of collaboration and adaptability. Working alongside other researchers and engineers taught me how to communicate complex ideas effectively, troubleshoot under pressure, and continuously refine my approach based on feedback and testing.</p>
             </div>
         </section>
 
-        <!-- Takeaways Section (two-column layout) -->
         <section class="details-section">
             <div class="details-left">
                 <h2>Takeaways</h2>
             </div>
             <div class="details-right">
                 <h2>Lessons Learned</h2>
-                <p>Throughout this project, I honed my skills in robotics software, particularly with ROS and RViz, and gained a deep understanding of how reinforcement learning and control systems can be applied to real-world problems. One of the most valuable lessons was the importance of sim-to-real consistency—bridging the gap between simulations and physical systems is critical for the success of autonomous systems in real-world scenarios. The hands-on work with the F1-Tenth car has been pivotal in my development as an engineer and researcher, and has solidified my passion for working at the intersection of hardware, software, and machine learning.</p>
+                <p>One of the biggest takeaways from this project was the critical role of iteration and adaptability in engineering. Simulation is a powerful tool, but real-world execution requires constant adjustments and problem-solving. I learned to embrace debugging as part of the process, not a setback.</p>
+                <p>Beyond technical skills, I honed my ability to collaborate in a fast-paced research environment. Balancing individual problem-solving with team-based brainstorming was key to overcoming challenges efficiently. Most importantly, this project reaffirmed my passion for working at the intersection of robotics, software, and AI—areas where innovation can directly impact real-world applications.</p>
             </div>
         </section>
     </div>
